--- a/Aula03/ExercicioL04_e14.html
+++ b/Aula03/ExercicioL04_e14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio 08'</title>
+    <title>Exercicio 14'</title>
 </head>
 <body>
     <h2>Cheque Especial</h2>
@@ -28,7 +28,9 @@
         if (ax_calc < 0 ) {
             div_msg.innerHTML = `O saldo atual da conta corrente é <span style="color: red"><b>R$${ax_calc}</b><span/>`;  
         }
-
+        else {
+            div_msg.innerHTML = `O saldo atual da conta corrente é <span style="color: blue"><i>R$${ax_calc}</i><span/>`;  
+        }
         ipt_conta.value = '';
         ipt_debito.value = '';
     }
