--- a/Sprint 1/SimuladorFinanceiro.html
+++ b/Sprint 1/SimuladorFinanceiro.html
@@ -11,12 +11,12 @@
 
     75% dos neotanos prematuros tendem a desenvolver uma hipotermia moderada/grave. <br> <br>
 
-    Insira a quantidade de bebês no seu hospital: <input id="ipt_bebes"> <br>
-    <div id="div_bebes"><i><span style="color: rgb(120, 111, 134);">Média de partos: 300.</span></i></div>
+    Insira a quantidade mensal de recem nascidos no seu hospital : <input id="ipt_bebes"> <br>
+    <div id="div_bebes"><i><span style="color: rgb(120, 111, 134);">Média de partos mensais: 300.</span></i></div>
     <br>
-    Insira a taxa de bebês prematuros: <input id="ipt_prematuros"><br>
+    Insira a taxa de recem nascidos prematuros: <input id="ipt_prematuros"><br>
     <div id="div_bebes"><i><span style="color: rgb(120, 111, 134);">Média entre: 11 a 18%</span></i></div> <br>
-    Insira seus gastos por dia com um bebê na UTIN: <input id="ipt_gastos"> <br>
+    Insira seus gastos por dia com um recem nascido na UTIN: <input id="ipt_gastos"> <br>
     <div id="div_utin"><i><span style="color: rgb(120, 111, 134);">Gasto médio diario por bebê: R$1350,00</span></i></div>
     <br>
     Insira a média de dias que um bebê precisa pra se recuperar na sua UTIN: <input id="ipt_dias"><br>
@@ -47,7 +47,7 @@ function economizar() {
 
     var ax_economia = ax_estimativa * ax_gasto_bb * ax_utins_dias;
 
-    div_calc.innerHTML = `Com ${ax_estimativa.toFixed(0)} bebês prematuros no seu hospital, sua economia pode chegar até <span style="color: green;"/> <b>R$${ax_economia.toFixed(0)}</b>.`
+    div_calc.innerHTML = `Se reduzissimos 40% dos casos, teriam ${ax_estimativa.toFixed(0)} bebês prematuros no seu hospital, sua economia pode chegar até <span style="color: green;"/> <b>R$${ax_economia.toFixed(0)} mensais </b> .`
     
 }
  
