Novos exercícios adicionados

--- a/Sprint03/atividadeAlgoritmos.html
+++ b/Sprint03/atividadeAlgoritmos.html
@@ -80,7 +80,7 @@ function analisar() {
 
         Bolos Válidos: ${qtdeBolosValidos} | Eficiência: ${percentualEficiencia}% <br>
 
-        Farinha Total: ${pesoFarinhaKg} kg | Média de Farinha por Bolo: ${mediaFarinha} kg <br> 
+        Farinha Total: ${pesoFarinhaKg} kg | Média de Farinha por Bolo: ${mediaFarinha.toFixed(2)} kg <br> 
 
         Total de Farinha Desperdiçada: ${farinhaDesperdicada} kg <br>
 
